css/master.css
/* ... */
.menu li {
  font-size: 1.4rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.1rem;
  padding: 2.0rem;
}

.menu li.logo, li.toggle{
  padding: 1.0rem 0rem;
}

/* Reversed basic styling */
a.light {
  color: #FFF;
  font-family: 'Open Sans', sans-serif;
  text-transform: none;
  text-decoration: none;
  transition: 0.3s;
}

a.light:hover{
  opacity: .7;
}


/* Mobile */

.menu {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
}

.toggle {
  order: 1;
}

.item {
  width: 100%;
  text-align: center;
  order: 2;
  display:none;
}

.item.active {
  display:block;
}


.hero-text {
  display: flex;
  justify-content: center;
  flex-direction: column;
  min-height: 100vh;
}


/* --------------------- Projects --------------------- */
.project {
  width: 100%;
  min-height: 100vh;
}
.casestudy-text {
  text-align: center;
  max-width: 75%;
  margin: auto;
}

.casestudy-text h6 {
  color: #F7A17E;
  margin-bottom: 1.2rem;
}

.view-casestudy-btn {
  background-color: #017F82;
  border: 0rem;
  border-radius: .4rem;
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
  height: 4.8rem;
  margin-bottom: 4.8rem;
  padding: 1.2rem 3.2rem 1.6rem 3.2rem;
  transition: 0.3s;
  width: auto;
}


.view-casestudy-btn:hover {
  background-color: #01BABE;
  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
  color: #FFF;
}

.button, .view-casestudy-btn a, .mobile-proto-btn a, .focal-std-btn a{
  color: #FFF;
  font-weight: 600;
  line-height: 0rem;
  letter-spacing: 0.1rem;
}


.casestudy-image img{
  display: block;
  margin: auto;
  position: relative;
  right: 10%;
  width:100%;
  max-width: 38.6rem;

}

/* --------------------- FOOTER --------------------- */
footer {
  /*background-image: url("file:///Users/j_colville/GRAPHIC-DESIGN-RELATED/BLOC/Module15-Portfolio/portfolio/img/hero-bg-shapes.png");
  background-color: #F2F5F5;*/
  background-size: cover;
  background-repeat: repeat-x;
  padding: 6.4rem 2.8rem 2.8rem 2.8rem;
  text-align: center;
}

.footer-content {
  border-top: 1px solid rgba(107,125,126,0.2);
  padding-top: 4.8rem;
}

.copyright {
  padding: 4.8rem 0rem 0rem 0rem;
  letter-spacing: 1.0rem;
}



/* --------------------- MEDIA QUERIES - TABLET - 767px --------------------- */
@media all and (min-width: 767px) {

  /* Type Size */
    h1 {
      font-size: 3.8rem;
      letter-spacing: -0.1rem;
      line-height: 5.4rem;
      margin-bottom: 3.2rem;
    }

    h2 {
      font-size: 3.6rem;
      letter-spacing: 0;
      line-height: 5.4rem;
      margin-bottom: 1.6rem;
    }

    blockquote {
      color: #017F82;
      font-family: Lustria, serif;
      font-size: 3.6rem;
      line-height: 5.4rem;
      letter-spacing: normal;
    }



  /* navigation menu */
    .item {
      display: block;
      width: auto;
    }

    .toggle {
      display: none;
    }

    .logo {
      flex: 1;
      order: 0;
    }

    .item {
      order: 1;
    }

  /* containers */
    .container-full {
      margin:auto;
      max-width: 117rem;
    }

    .container-small {
      margin:auto;
      max-width: 57rem;
    }


  /* header text */
    .mobile-hidden {
      display: block;
    }

  /* projects */
  .project {
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    flex-wrap: nowrap;
    padding: 0rem 2.8rem;
  }

  .casestudy-text{
    align-self: center;
    flex-basis: 50%;
    margin: 0;
    text-align: left;
  }

  .casestudy-image {
    align-self: center;
  }

}




/* --------------------------------------------------------------- Case Study CSS --------------------------------------------------------------- */




.casestudy-body {
  background-color: #fff;
}

/* --------------------- PAGE STYLES --------------------- */


.hero-section {
  background-image: url("/Users/j_colville/GRAPHIC-DESIGN-RELATED/BLOC/Module15-Portfolio/portfolio/img/focal/hero-shapes.png"), linear-gradient(119deg, #3152a7, #4064c0);
}

.full-width {
  width: 100%;
}

.color-bg {
  background-color: #F2F5F5;
}

.focal-std-btn {
  background-color: #3658AF;
  border: 0rem;
  border-radius: .4rem;
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
  display: block;
  height: 4.8rem;
  margin-top: 3.2rem;
  margin-bottom: 4.8rem;
  padding: 2.4rem 3.2rem 1.6rem 3.2rem;
  text-align: center;
  transition: 0.3s;
  width: 100%;
}

.focal-std-btn:hover {
  color: #FFF;
  opacity: 0.8;
  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
}

.h4-focal {
  color: #6587E0;
}


blockquote {
  padding-top: 9.6rem;
  color: #284CAC;
}


/* --------------------- HEADER --------------------- */

/* structure */


.hero-content {
  color: #FFF;
  display: flex;
  flex-direction: column;
  padding: 9.6rem 2.8rem 0rem 2.8rem;
}

/* Text Content */
.main-content{
  text-align: center;
}

.main-content h1, .main-content p{
  color: #FFF;
}

/* button */
a.mobile-proto-btn {
  background-color: #FDC35D;
  border: 0rem;
  border-radius: .4rem;
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
  height: 4.8rem;
  padding: 1.2rem 3.2rem 1.6rem 3.2rem;
  transition: 0.3s;
  width: 100%;
  margin: auto;
  margin-bottom: 4.8rem;
}

a.mobile-proto-btn {
  color: #284CAC;
}

.button.mobile-proto-btn:hover {
  background-color: #FDD892;
  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
}


/* Details */

.details-bg {
  background-color: rgba(7,0,0,0.25);
}



.details-column ul{
  margin-bottom: 4.8rem;
}

.details-column ul li{
  color: #FFF;
  line-height: 2.4rem;
  font-size: 1.2rem;
  margin-bottom: 0rem;
}

.details-column ul li.list-heading {
  color: #FFF;
  font-family: 'Lustria', serif;
  font-size: 1.8rem;
  letter-spacing: 0;
  line-height: 3.2rem;
  margin-bottom: 1.6rem;
}
/* ... */

